# RemoteAppDock

./: .gitignore  NOTICE  README.md  README_CN.md  RemoteAppDock.spec  pyproject.toml
.github/workflows/: release.yml
remoteappdock/: __init__.py  app.py  config.py  main.py  platform.py  single_instance.py  update_checker.py  updater.py  version.py
remoteappdock/i18n/: __init__.py  zh_CN.qm  zh_CN.ts
remoteappdock/models/: application_window.py  notify_icon.py  task_category.py
remoteappdock/services/: appbar_manager.py  dummy.py  explorer_helper.py  explorer_tray_service.py  hotkey_manager.py  notification_area.py  shell_manager.py  snap_layout_helper.py  tasks_service.py  tray_service.py
remoteappdock/ui/: flow_layout.py  notify_icon_list.py  notify_icon_widget.py  settings_window.py  task_button.py  task_list.py  taskbar_window.py
remoteappdock/utils/: helpers.py  icon_converter.py  logging.py
remoteappdock/win32/: api.py  constants.py  message_pump.py  structs.py  wndproc.py
tests/: test_config.py  test_placeholder.py  test_single_instance.py  test_tasks_service.py  test_tray_service.py  test_updater.py  test_win32.py
